<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_departures"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/departures" />
        <item
            android:id="@+id/nav_routes"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/routes" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/settings" />
    </group>

    <item android:title="@string/disruptions">
        <menu>
            <item
                android:id="@+id/nav_disruptions"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/disruptions" />
            <item
                android:id="@+id/nav_monitoring"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/monitoring" />
        </menu>
    </item>

    <item android:title="@string/orientation">
        <menu>
            <item
                android:id="@+id/nav_maps"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/maps" />
            <item
                android:id="@+id/nav_lines"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/lines" />
        </menu>
    </item>

</menu>
